--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -118,7 +118,7 @@ stages:
                         Add-AzStorageAccountNetworkRule -ResourceGroupName $(ShdResourceGroupName) -AccountName $(storageAccountName) -IPAddressOrRange "$publicIp"
                         Write-Host "##vso[task.setvariable variable=agentIp]$publicIp"
 
-                        Start-Time 60
+                        Start-Sleep 60
 
                   - task: AzureCLI@2
                     displayName: 'Empty Storage Container Contents'
