--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -70,6 +70,14 @@ variables:
     value: false
 
 stages:
+
+# Code Scans & Build the artifact for deployment
+- stage: scanBuildApp
+  displayName: "Scan tools & Build"
+  jobs:
+  # Code scaning tools
+  - template:  pipeline/checkov.yml@devopsTemplates
+
 - ${{ each var in variables }}:
   - ${{ if in(var.key, 'tran','dev','test','int','pp','pr') }}:
     - ${{ if eq(var.value, 'true') }}:
