Revert "Update azure-pipeline.yml"
This reverts commit b205c3deca3a1f781473fb10c0ae261483ae68b1.

--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -117,6 +117,7 @@ stages:
             runOnce:
               deploy:
                 steps:
+                  - checkout: self
 
                   - task: AzurePowerShell@5
                     displayName: Enable Access
