--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -153,21 +153,20 @@ stages:
                         Start-Sleep 60
                         az storage blob delete-batch --account-name $(storageAccountName) --source $(UIContainerName) --only-show-errors --auth-mode=login
                         
-
-
-                  - task: AzureFileCopy@5
-                    displayName: Copy Content to Storage Account Container
+                  - task: AzureCLI@2
+                    displayName: 'Copy Content to Storage Account Container'
                     inputs:
-                      SourcePath: $(System.DefaultWorkingDirectory)/dist
                       ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
                         azureSubscription: $(devServiceConnection)
                       ${{ elseif eq(var.key, 'pr') }}:
                         azureSubscription: $(prodServiceConnection)
                       ${{ else }}:
                         azureSubscription: $(testServiceConnection)
-                      Destination: AzureBlob
-                      storage: '$(storageAccountName)'
-                      ContainerName: '$(UIContainerName)'
+                      scriptType: pscore
+                      scriptLocation: inlineScript
+                      inlineScript: |
+                        az storage azcopy blob upload -c $(UIContainerName) --account-name $(storageAccountName) -s $(UIContainerName) --recursive --auth-mode=login
+                       
                         
                   - task: AzureCLI@2
                     displayName: Purge content & Updated CDN Version
