--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -132,7 +132,7 @@ stages:
                       azurePowerShellVersion: 'LatestVersion'
                       Inline: |
                         $publicIp = Invoke-RestMethod -uri https://api.ipify.org
-                        
+                        Write-Host "Public Ip : $publicIp "
                         Add-AzStorageAccountNetworkRule -ResourceGroupName $(ShdResourceGroupName) -AccountName $(storageAccountName) -IPAddressOrRange "$publicIp"
                         Write-Host "##vso[task.setvariable variable=agentIp]$publicIp"
 
