--- a/package.json
+++ b/package.json
@@ -3,39 +3,46 @@
   "version": "1.1.1",
   "description": "DfE front-end toolkit",
   "main": "index.js",
+  "scripts": {
+    "dev": "NODE_ENV='development' gulp run-server build-gds",
+    "build": "gulp build-gds",
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.16.2",
+    "govuk_frontend_toolkit": "^9.0.1",
+    "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "^3.1.2",
-    "govuk_frontend_toolkit": "^7.2.0",
-    "govuk_template_jinja": "^0.22.3",
-    "govuk-frontend": "^4.6.0",
+    "govuk-frontend": "^4.7.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "nunjucks": "^3.2.0"
   },
   "devDependencies": {
-    "browserify": "^16.5.2",
+    "browserify": "^17.0.0",
     "cors": "^2.8.5",
-    "eslint": "^4.11.0",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint": "^8.54.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.8.0",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.9.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-dart-sass": "^1.0.2",
     "gulp-if": "^3.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-rename": "^2.0.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uglify-es": "^3.0.0",
     "select2": "^4.0.6-rc.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
-  "scripts": {
-    "dev": "NODE_ENV='development' gulp run-server",
-    "build": "gulp",
-    "start": "node server.js"
+  "overrides": {
+    "glob-parent": "5.1.2",
+    "postcss": "8.4.31",
+    "glob-watcher":{
+      "chokidar": "3.0.0"
+    }
   },
   "repository": {
     "type": "git",
