--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -92,9 +92,9 @@ stages:
 
   - template:  pipeline/eslint.yml@devopsTemplates
 
-  - template:  pipeline/dependencyCheck.yml@devopsTemplates
-    parameters:
-      npmInstCmd: 'install --force --json --no-package-lock'
+  # - template:  pipeline/dependencyCheck.yml@devopsTemplates
+  #   parameters:
+  #     npmInstCmd: 'install --force --json --no-package-lock'
 
 - ${{ each var in variables }}:
   - ${{ if in(var.key, 'tran','dev','test','pp','pr') }}:
