updated automation trigger for main

--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -12,13 +12,13 @@ trigger:
   branches:
     include:
     - release/*
-    - develop
+    - main
     - feature/*
 
 pr:
   branches:
     include:
-    - develop
+    - main
 
 parameters:
 - name: location
@@ -66,7 +66,7 @@ variables:
   ${{ else }}:
     value: false
 - name: test
-  ${{ if or(eq(parameters.test, 'true'), contains(variables['Build.SourceBranch'],'develop')) }}:
+  ${{ if or(eq(parameters.test, 'true'), contains(variables['Build.SourceBranch'],'main')) }}:
     value: true
   ${{ else }}:
     value: false
