--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -246,7 +246,7 @@ stages:
       - stage: branchPrTag
         displayName: "GitHub PR & Release Branch Tag"
         dependsOn: 
-        - Deployment_${{var.key}}
+        - Deploy_${{var.Key}}
         jobs:
         - template:  pipeline/tagCreation.yml@devopsTemplates
           parameters:
